--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,12 @@ lib/FirePHP/
 lib/monolog/
 lib/twig/
 
-#data/cache/
 #data/files/
 #data/log/
 #data/sessions/
 #data/tmp/
-
 #data/data/
+data/cache/
 data/locale/
 data/styles/
 data/uploads/
